<resources>
    <string name="app_name">SocketDemo</string>
    <string name="socket_server">Socket服务端</string>
    <string name="socket_client">Socket客户端</string>
    <string name="ip_address">Ip地址:</string>
    <string name="connect_server">连接服务</string>
    <string name="info">信息</string>
    <string name="send_info_tips">发送给客户端</string>
    <string name="send">发送</string>
    <string name="start_server">开启服务</string>
</resources>