<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_chainStyle="packed"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_ip_address"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/socket_server"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_client"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/socket_client"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/ip_address"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintBottom_toTopOf="@id/btn_start_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/start_server"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_ip_address"
        app:layout_constraintBottom_toTopOf="@id/til_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/btn_connect_server"
        app:layout_constraintTop_toBottomOf="@id/btn_start_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="连接Ip地址"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_connect_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/connect_server"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_layout"
        app:layout_constraintBottom_toTopOf="@id/rv_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_input_info"
        app:layout_constraintTop_toBottomOf="@id/btn_connect_server" />

    <LinearLayout
        android:id="@+id/ll_input_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/rv_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_send_info"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical"
            android:hint="@string/send_info_tips"
            android:textSize="14sp"
            android:background="@drawable/bg_et"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_message"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/send"
            app:cornerRadius="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>